--- a/backend/.env
+++ b/backend/.env
@@ -7,5 +7,6 @@ API_SECRET=Qjm0NyWv8z65raGWWaOfNm2oEbY
 API_KEY=432125973473748
 CLOUD_NAME=dkfeinc1k
 CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@dkfeinc1k
-IPN_URL=https://eaaf-42-116-146-219.ngrok-free.app
+IPN_URL=https://094e-117-6-160-162.ngrok-free.app 
 API_KEY=AIzaSyBmvclbEwWdNxvD7OTZGeGZSbuxlCqRYoo
+MAIL_PASS=mawxodrlzosgmuws
