Gợi ý ở trang detail-motorbike

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:5000
-REACT_APP_API_FLASK=http://127.0.0.1:5001
+REACT_APP_API_URL=https://reantal-motorbike-web-node.onrender.com
+REACT_APP_API_FLASK=https://reantal-motorbike-web-flask.onrender.com
