Add required Admin, owner

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 REACT_APP_API_URL=https://reantal-motorbike-web-node.onrender.com
 REACT_APP_API_FLASK=https://reantal-motorbike-web-flask.onrender.com
+
+# NGUYEN VAN A	9704 0000 0000 0018	03/07	OTP	Thành công
+# NGUYEN VAN A	9704 0000 0000 0026	03/07	OTP	Thẻ bị khóa
